fix: Correct alignment and justification classes in flexbox mixins

--- a/frontend/sass/flexbox/row-align-justify-mix/_flexbox-wrap-row-align-justify.sass
+++ b/frontend/sass/flexbox/row-align-justify-mix/_flexbox-wrap-row-align-justify.sass
@@ -27,12 +27,12 @@
     justify-content: space-between
     @include mix.flexbox-generator('flex-wrap-row')
 
-.flex-wrap-row-align-items-flex-end-justify-space-between
-    align-items: flex-end
-    justify-content: space-evenly
-    @include mix.flexbox-generator('flex-wrap-row')
-
 .flex-wrap-row-align-items-end-justify-space-between
     align-items: flex-end
     justify-content: space-between
+    @include mix.flexbox-generator('flex-wrap-row')
+
+.flex-wrap-row-align-items-end-justify-space-evenly
+    align-items: flex-end
+    justify-content: space-evenly
     @include mix.flexbox-generator('flex-wrap-row')
